# CS290I

./: LICENSE  README.md
fastmesh_and_plane/src/: openni-fast-mesh.cpp
hw3_static/: pcl_visualizer_demo.cpp
openGL-test/: CMakeLists.txt  drawGL  main  main.cpp  main.cpp.bak
openGL-test/textures/: brick.ppm  carpet.ppm  lava.ppm  sky.ppm  sky2.ppm  sky3.ppm  stone.ppm  tile.ppm  wall.ppm  water.ppm  wood.ppm
project/: CMakeLists.txt  cs290i_project  freenect_fix.hpp  kinect.cpp  primitives.cpp
project/Benji/: CMakeLists.txt  freenect_fix.hpp  kinect.cpp  main.cpp  primitives.cpp  primitives.hpp
project/Benji/proj/: .PROGRESS.swp  CMakeLists.txt  PROGRESS  fire  fire.cpp  tutorial18_particles.cpp
project/Benji/proj/cmake_modules/: FindGLM.cmake
project/Benji/proj/georg/: CMakeLists.txt  System.h  main  main.cpp
project/Benji/proj/perlin_first_step/: CMakeLists.txt  fire  fire.cpp
project/Benji2/: CMakeLists.txt  kinect.cpp  primitives.hpp
project/Benji2/common/: controls.cpp
project/Benji2/shaders/: Particle.fragmentshader  Particle.vertexshader
