cmake_minimum_required(VERSION 2.8)
PROJECT(main)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLUT REQUIRED) 
INCLUDE_DIRECTORIES( ${OPENGL_INCLUDE_DIRS} ${GLUT_INCLUDE_DIRS} ./)
SET(MySources main.cpp )
ADD_EXECUTABLE( main ${MySources} )
TARGET_LINK_LIBRARIES( main ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} )
SET_SOURCE_FILES_PROPERTIES(${MySources} PROPERTIES LANGUAGE CXX )
