cmake_minimum_required(VERSION 2.8)

PROJECT(main)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLUT REQUIRED) 
FIND_PACKAGE(PCL 1.7 REQUIRED)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules/")
SET(LIBFREENECT_LIBRARIES "/usr/lib/libfreenect.so")

FIND_PACKAGE(libusb-1.0 REQUIRED)

INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIRS} ${GLUT_INCLUDE_DIRS} ${PCL_INCLUDE_DIRS} ${LIBUSB_1_INCLUDE_DIR})

LINK_DIRECTORIES(${PCL_LIBRARY_DIRS})

ADD_DEFINITIONS(${PCL_DEFINITIONS})

SET(MySources kinect.cpp primitives.cpp)

ADD_EXECUTABLE( main ${MySources} )

TARGET_LINK_LIBRARIES( main ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${PCL_LIBRARIES} ${LIBFREENECT_LIBRARIES})

#SET_SOURCE_FILES_PROPERTIES(${MySources} PROPERTIES LANGUAGE CXX )
