cmake_minimum_required(VERSION 2.8)
PROJECT(fire)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLUT REQUIRED) 
INCLUDE_DIRECTORIES( ${OPENGL_INCLUDE_DIRS} ${GLUT_INCLUDE_DIRS} ./)
SET(MySources fire.cpp System.cpp )
ADD_EXECUTABLE( fire ${MySources} )
TARGET_LINK_LIBRARIES( fire ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} )
SET_SOURCE_FILES_PROPERTIES(${MySources} PROPERTIES LANGUAGE CXX )
